#Service commit
Для реализации бизнес логики по добавлению изменени и покупке:
- дополнены и изменены сервисы.
- внесены изменения в DTO.